syntax = "proto3";

package test.v1.topic;

import "google/protobuf/empty.proto";
import "j5/messaging/v1/annotations.proto";
import "j5/messaging/v1/reqres.proto";

option go_package = "github.com/pentops/o5-messaging/internal/testproto/gen/test/v1/test_tpb";

service TestTopic {
  option (j5.messaging.v1.service).publish = {};
  rpc Test(TestMessage) returns (google.protobuf.Empty);
}

message TestMessage {
  string message = 1;
}

service GreetingRequestTopic {
  option (j5.messaging.v1.service).request = {};
  rpc Greeting(GreetingMessage) returns (google.protobuf.Empty);
}

message GreetingMessage {
  j5.messaging.v1.RequestMetadata request = 1;
  string name = 2;
}

service GreetingResponseTopic {
  option (j5.messaging.v1.service).reply = {};
  rpc Response(ResponseMessage) returns (google.protobuf.Empty);
}

message ResponseMessage {
  j5.messaging.v1.RequestMetadata request = 1;
  string message = 2;
}
